Accepted! Add authors.

--- a/main.tex
+++ b/main.tex
@@ -129,9 +129,10 @@
 }
 
 \title{Hardware Fingerprinting for the ARINC 429 Avionic Bus}
-%\author{Avishai Wool, Nimrod Gilboa Markevich}
-\author{Anonymous}
-\institute{An Anonymous University}
+\author{Nimrod Gilboa-Markevich\textsuperscript{1}, Avishai Wool\textsuperscript{2}}
+
+\institute{School of Electrical Engineering, Tel Aviv University, Ramat Aviv 69978, Israel\\ 
+\textsuperscript{1}\texttt{gmnimrod@gmail.com}, \textsuperscript{2}\texttt{yash@eng.tau.ac.il }}
 
 \begin{document}
 
