Changed bibliography style IEEEtranS -> splncs

--- a/main.tex
+++ b/main.tex
@@ -691,8 +691,8 @@
   
   ARINC 429 lacks essential security features. It is a safety liability that is present today in almost every civil aircraft.
   Our method could help close the gap between ARINC 429 and modern security requirements. Thus, we argue that it is a valuable addition to the protection of any airborne system which uses the ARINC 429 bus.
-  
-\bibliographystyle{IEEEtranS}
+
+\bibliographystyle{splncs04.bst}
 \bibliography{biblio} 
 
 \appendix
