Added citation of the full technical report (arxiv).

--- a/biblio.bib
+++ b/biblio.bib
@@ -518,3 +518,10 @@ Year={2007},
   year={2020},
   publisher={Internet Society}
 }
+
+@article{gilboa-markevich2020hardware,
+        title={Hardware Fingerprinting for the ARINC 429 Avionic Bus},
+        author={Nimrod Gilboa-Markevich and Avishai Wool},
+        journal={arXiv preprint arXiv:2003.12456},
+        year={2020}
+}
