--- a/main.tex
+++ b/main.tex
@@ -691,6 +691,9 @@
   
   ARINC 429 lacks essential security features. It is a safety liability that is present today in almost every civil aircraft.
   Our method could help close the gap between ARINC 429 and modern security requirements. Thus, we argue that it is a valuable addition to the protection of any airborne system which uses the ARINC 429 bus.
+ 
+\subsection*{Acknowledgments}
+This work was supported in part by a grant from the Interdisciplinary Cyber Research Center at Tel Aviv University.
 
 \bibliographystyle{splncs04.bst}
 \bibliography{biblio} 
